# notepadpp-s2t-plugin

./: .gitignore  CMakeLists.txt  README.md  S2TConverter.def
.github/workflows/: build.yml
scripts/: build_x64.bat
src/: plugin.cpp
